trying to solve slightly moving picture when scrolling on mobile(motto background fixed img- top anfd left set to zero)

--- a/sass/_motto.scss
+++ b/sass/_motto.scss
@@ -1,6 +1,8 @@
 section.motto {
   background-image: url(../images/motto.jpg);
   background-attachment: fixed;
+  top: 0;
+  left:0;
   background-size: cover;
   background-position: center;
   div.bg {
